@@ -8,6 +8,8 @@ Changes - Apache::Test change logfile
 
 =item 1.01-dev
 
+a few fixes in Makefile.PL and t/TEST.PL to work with perl-5.005_03 [Stas]
+
 perlpods are found either in the 'pods/' or 'pod/' subdirs [Randal
 L. Schwartz <merlyn@stonehenge.com>]
 
